public/css/choko.css
a {
  color: #78c06a;
}

.btn-primary {
  color: #ffffff;
  background-color: #78c06a;
  border-color: #78c06a;
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary{
  color: #ffffff;
  background-color: #4f8d43;
  border-color: #4f8d43;
}

/* Small displays */

/* Homepage */
.home .row-highlight {
  background: url(/img/hero-devices.jpg) 0 50% fixed repeat;
  margin-top: -21px;
  min-height: 344px;
}
.home .row-highlight .jumbotron {
  background: none;
}
.home .row-highlight .jumbotron .btn {
  margin-top: 16px;
}


/* Yeti customizations */
.home .row-highlight .jumbotron h1 {
  font-size: 35px;
}
.home .row-highlight .jumbotron h1,
.home .row-highlight .jumbotron h2 {
  color: #fff;
  font-weight: 600;
  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
}
.home .row-highlight .jumbotron p.lead {
  color: #fff;
  /*color: #222;*/
  font-weight: 500;
  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
}

/* Homepage */
.home .row-feature-top {
  text-align: center;
  margin-top: 80px;
}

.navbar {
  font-size: 15px;
}
.navbar-default {
  background-color: #4f8d43;
}
.navbar-nav>li>a {
  padding-top: 15px;
  padding-bottom: 15px;
}
.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
  color: #ffffff;
  /* #78c06a */
  background-color: rgba(120, 192, 106, 0.3);
}
.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
  color: #ffffff;
  background-color: #78c06a;
}
.navbar-brand {
  padding: 7px 15px 6px 15px;
}
.navbar-brand > div {
  overflow: hidden;
  text-indent: -999em;
  background: url(/img/logo-site-small.png) left top no-repeat;
  width: 146px;
  height: 65px;
}
.navbar-btn {
  margin-top: 20px;
  margin-bottom: 20px;
}
.navbar-btn.btn-link {
  color: #fff;
}

/* Medium and large displays */
@media screen and (min-width: 768px) {
  .home .row-highlight {
    min-height: 509px;
  }
  .home .row-highlight .jumbotron {
    padding-top: 90px;
    padding-bottom: 90px;
    /* For when putting the video on the jumbotron
    padding: 90px 15px;*/
  }
  .home .row-highlight .jumbotron h1 {
    font-size: 70px;
  }
  .navbar-brand {
    padding: 13px 20px 12px 20px;
  }
  .navbar-brand > div {
    background: url(/img/logo-site.png) left top no-repeat;
  }
  .navbar-nav > li > a {
    padding-top: 35px;
    padding-bottom: 35px;
  }
  .home .row-content {
    max-width: 900px;
    margin: 0 auto;
  }
  .home .row-content .image-left h2,
  .home .row-content .image-left p {
    padding-left: 55%;
  }
  .home .row-content .image-right h2,
  .home .row-content .image-right p {
    padding-right: 55%;
  }
}

.content {
  max-width: 730px;
}

